# fiction-kit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SUPPORT.md  fiction-methodology.md  pyproject.toml
.fiction-research/: beat-sheet-methodology-best-practices.md  commercial-style-best-practices.md  discovery-methodology-best-practices.md  fantasy-genre-best-practices.md  literary-style-best-practices.md  snowflake-methodology-best-practices.md  thriller-genre-best-practices.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
memory/: principles.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-story.sh  setup-outline.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-story.ps1  setup-outline.ps1  update-agent-context.ps1
src/fiction_cli/: __init__.py
templates/: Makefile  agent-file-template.md  character-template.md  checklist-template.md  magic-ability-template.md  navigation-guide.md  outline-acts-template.md  outline-arcs-template.md  outline-chapters-template.md  outline-index-template.md  outline-template.md  premise-template.md  prose-index-template.md  scene-prose-template.md  scenes-chapter-group-template.md  scenes-index-template.md  scenes-template.md  synopsis-template.md  vscode-settings.json  world-event-template.md  world-template.md
templates/commands/: chapter.md  character.md  chat.md  checklist.md  develop.md  dialogue.md  draft.md  outline.md  premise.md  principles.md  refine.md  research.md  review.md  scenes.md  (+7 more)
(+10 files in other folders)
