[project]
name = "fiction-cli"
version = "0.1.0"
description = "Fiction CLI, part of Fiction Kit. An AI-assisted toolkit for writing fiction novels with structured workflows."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
fiction = "fiction_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fiction_cli"]
